ws config change (added mapping bot ws) + little change in client ws handler