@@ -1,30 +1,36 @@
 package com.rybki.spring_boot.config;
 
-import java.util.Collections;
+import java.util.Map;
 
+import com.rybki.spring_boot.websocket.BotWebSocketHandler;
 import com.rybki.spring_boot.websocket.ClientWebSocketHandler;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.reactive.handler.SimpleUrlHandlerMapping;
+import org.springframework.web.reactive.socket.WebSocketHandler;
 import org.springframework.web.reactive.socket.server.support.WebSocketHandlerAdapter;
-
 
 @Configuration
 @RequiredArgsConstructor
 public class WebSocketConfig {
 
     private final ClientWebSocketHandler clientWebSocketHandler;
+    private final BotWebSocketHandler botWebSocketHandler;
 
     @Bean
     public SimpleUrlHandlerMapping webSocketMapping() {
-        final SimpleUrlHandlerMapping mapping = new SimpleUrlHandlerMapping();
-        mapping.setUrlMap(Collections.singletonMap("/ws/client", clientWebSocketHandler));
-        mapping.setOrder(10); // порядок маппинга
+        Map<String, WebSocketHandler> urlMap = Map.of(
+            "/ws/client/**", clientWebSocketHandler,
+            "/ws/bot/**", botWebSocketHandler
+        );
+
+        SimpleUrlHandlerMapping mapping = new SimpleUrlHandlerMapping();
+        mapping.setUrlMap(urlMap);
+        mapping.setOrder(10);
         return mapping;
     }
 
-    // для адаптации нашего WebSocketHandler в WebFlux
     @Bean
     public WebSocketHandlerAdapter handlerAdapter() {
         return new WebSocketHandlerAdapter();
